--- a/twi_test/platformio.ini
+++ b/twi_test/platformio.ini
@@ -17,10 +17,15 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
-[env:uno]
-platform=atmelavr
-framework=arduino
-board=uno
+#[env:uno]
+#platform=atmelavr
+##framework=arduino
+#board=uno
 
 [platformio]
 src_dir=.
+
+[env:nanoatmega328]
+platform = atmelavr
+framework = arduino
+board = nanoatmega328
