conditional printout og layer turns and casting

--- a/lcd_menu/platformio.ini
+++ b/lcd_menu/platformio.ini
@@ -29,3 +29,4 @@ src_dir=.
 platform = atmelavr
 framework = arduino
 board = nanoatmega328
+extra_script = /home/john/git/winder-lcd/lcd_menu/add_git-to_c.py
